# markitdown-gui

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  kimi_k26_review.py  kimi_k26_review_v2.py  kimi_k26_review_v3.py  pyproject.toml  qwen37_final_review.py  review_kimi_ui.py  review_m3.py  review_m3_v2.py  test_final.py  test_models.py  test_models_final.py  test_models_round2.py  test_models_v2.py  test_v3.py
.github/workflows/: build.yml
markitdown_gui/: __init__.py  main.py
markitdown_gui/app/: main_window.py  settings.py  worker.py
markitdown_gui/i18n/: en_US.json  zh_CN.json
markitdown_gui/ui/: drop_area.py  file_list.py  preview.py  settings_dialog.py
markitdown_gui/utils/: converter.py
resources/styles/: style.qss
tests/: __init__.py  test_converter.py
