[project]
name = "markitdown-gui"
version = "0.1.0"
description = "MarkItDown 桌面图形客户端 - 将各类文档转换为 Markdown 格式"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6.0",
    "markitdown>=0.1.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["markitdown_gui*"]
